# tournaman-aux

./: .gitignore  LICENSE  README.md  stack.yaml  tournaman-aux.cabal
src/: Main.hs
src/Tournaman/Parser/: Adjudicators.hs  Common.hs  Debates.hs  Teams.hs  Venues.hs
src/Tournaman/Parser/Adjudicators/: Types.hs
src/Tournaman/Parser/Common/: Types.hs
src/Tournaman/Parser/Debates/: Types.hs
src/Tournaman/Parser/Teams/: Types.hs
src/Tournaman/Report/: Feedback.hs
templates/: chair_wing.tex  header.tex  room.tex  team_chair.tex  wing_chair.tex
